--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ui-select",
   "main": "dist/select.js",
   "author": "http://github.com/angular-ui/ui-select/graphs/contributors",
-  "homepage": "http://github.com/angular-ui/ui-select",
+  "homepage": "http://github.com/andrewmh/ui-select",
   "repository": {
-    "url": "git://github.com/angular-ui/ui-select.git"
+    "url": "git://github.com/andrewmh/ui-select.git"
   },
-  "version": "0.13.2",
+  "version": "0.13.3",
   "devDependencies": {
     "bower": "~1.3",
     "del": "~0.1.1",
